# inf-k8s

./: .dockerignore  .gitattributes  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .trivyignore.yaml  .typos.toml  .yamllint  README.md  argocd-values.yaml  index.yaml  justfile  lefthook.yml  renovate.json  trivy.yaml
components/janitor-bot/: CLAUDE.md  Cargo.toml  Dockerfile  build.rs  rule.schema.json  rules.schema.json  rules.yaml
components/janitor-bot/rules/: argocd-diff-renovate.yaml  argocd-sync-status.yaml  auto-merge-ci-image-updater.yaml  auto-merge-renovate.yaml  automerge-renovate-on-green.yaml  github-workflow-failure.yaml  github-workflow-resolved.yaml  label-conflicts.yaml  label-renovate.yaml  manage-ci-image-updater.yaml  manage-conflicts.yaml  manage-github-workflow.yaml  manage-renovate.yaml  mirror-commit-status.yaml  queue-ci-image-updater.yaml  queue-renovate.yaml  retry-renovate-workflow.yaml  unlabel-conflicts.yaml
components/janitor-bot/src/: clients.rs  command.rs  event.rs  feature_flag.rs  forgejo.rs  git.rs  github.rs  lib.rs  main.rs  marker.rs  metrics.rs  routes.rs  rules.rs  schema.rs  server.rs
components/janitor-bot/tests/: integration.rs
config-catalog/: Cargo.toml
config-catalog/cli/: Cargo.toml
config-catalog/cli/src/: main.rs
config-catalog/config-catalog-api/: Cargo.toml
config-catalog/config-catalog-api/src/: auth.rs  main.rs  state.rs
config-catalog/config-catalog-events/: Cargo.toml  config.yaml
config-catalog/config-catalog-events/src/: config.rs  main.rs
config-catalog/config-catalog-jwt/: Cargo.toml
config-catalog/config-catalog-jwt/src/: lib.rs
config-catalog/object-registry/: Cargo.toml
config-catalog/object-registry/src/: lib.rs
crates/feature-flag/feature-flag-client/: Cargo.toml
crates/feature-flag/feature-flag-engine/: Cargo.toml
crates/feature-flag/openfeature-provider/: Cargo.toml
home/: Cargo.toml  Dockerfile  application.yaml
home/kubernetes/: client.policy.yaml  deployment.yaml  gateway.yaml  httproute.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  securitypolicy.yaml
home/src/: main.rs
object-registry/: Cargo.toml  application.yaml  home-gateway-gha.pem  test.pem
object-registry/cli/: Cargo.toml
object-registry/cli/src/: main.rs
object-registry/object-registry/: Cargo.toml
object-registry/object-registry-api/: Cargo.toml
object-registry/object-registry-api/examples/: s3_crud.rs
object-registry/object-registry-api/kubernetes/: endpointslice.yaml  kustomization.yaml  service.yaml
object-registry/object-registry-api/src/: auth.rs  error.rs  main.rs  permissions.rs  s3_auth.rs  state.rs
object-registry/object-registry-events/: Cargo.toml  config.yaml
object-registry/object-registry-events/src/: main.rs
object-registry/object-registry-foundations/: Cargo.toml
object-registry/object-registry-foundations/src/: lib.rs
object-registry/object-registry-ui/: .dockerignore  Dockerfile  README.md  application.yaml  package.json  pnpm-lock.yaml  svelte.config.js
object-registry/object-registry-ui/kubernetes/: deployment.yaml  namespace.yaml  service.yaml
object-registry/object-registry/src/: api_client.rs  lib.rs  types.rs
platform-services/ai-gateway/: .env.local  Cargo.toml  Dockerfile  PLAN.md  application.yaml  config.yaml  docker-compose.yaml  kustomization.yaml
platform-services/ai-gateway/.sqlx/: query-198fa8606037714bca3d4698607a4ffd55486e50c7053d127716ba8f05e73f1b.json  query-38340a1b3e0339728aef549f05f7fa6afc5f1ad53333518e49cc8d2609590c1f.json  query-3c4ab52abd139548c8f178178c4108c729cdf36ef5af6fe75b1744c87e7eb3b5.json  query-67b442cfead0fe6add0afd168fe8446700f3b597b96141781cd082ea367c6531.json  query-6b170f0a698cf69d2ca5cf671b921900c177a2011c9104670671ebb0c614aa66.json  query-70e7743f40c7ed630edbc923f8c7a47b849b512538ee0c65031558900249cefc.json  query-7761b4533a9fbbb0bd806dfe660f6ef834ecc83977352a0ec4c19a3113a0e9d8.json  query-77c630bdfa6650364b004dde87533c9421c71bf14df4befb69ab12e4cfa94ff5.json  query-828b45d84ee8739648b5f2c89d2244f94327828043af22da317d81e9cf5f96e6.json  query-84deeaaa29cc917f4f302ff59022b598e4bd3d6ae40740796c4067e1c170e76c.json  query-911d6a65a6e77ab2bba0ebe943a177fa5208b9b0fc179637dfdadb0b1d00cea7.json  query-9402aaa906f0fef5fed22bdee6a08e0e6518edd0e36e259a5e5b7861125cd87a.json  query-9d3a65ebaf439ced10e7089da81d6985b3fe02fd62cd69e99df2db9fcb5a663a.json  query-ace30038a17b18ef7e4e675402fc80ce0ede610dec9fdc070a1efc07f4698cd3.json  query-bb822a573abf98859be29ac7f6c1c142d6ba7096b68ca2ac8306a84510317a93.json  query-bf1ef82ff2947ac3770148ee073a4f8bfdf64879e1dea1181c3e5d75866afc8a.json  query-c75fb416f82ce09d226e3c44b25bfecaea6fee9c79cb2f73142ddcfdcfc0d561.json  query-d68330078a80a0046839d977c383528fde114e53c8a0bba42106b4d103345ad4.json  query-d83a8e8e2e11560ae296612b994687670a892f84563344820950c1f16f3e0c4b.json  query-e2fe6c0b40eef8529bf18f12ae205108760a3e2d7d0df33eced09a65f5c69ca0.json  query-ecf9978bf8debaddb96d4f452b8717ba8ab8307e60abe1ce5c2fb776f54a0de2.json  query-f24feadb443a88ca5c278e81ced1b25ab11f2ab74cf7f31cc8d76113c396f8b3.json  query-f47aff7dd126960828726533e7051501cc00e4a44bfbf0ceb3f573dc4d46c3a6.json  query-f9a7b2e7059a5389fcae77e55ea459b0e5565bc77437e75a7652a937803135b9.json  query-fb15048cc8644f2203d7a9dffa118c96dca0ed879497a63bcffb70faefb29c0c.json
platform-services/ai-gateway/dashboards/: ai-gateway.json
platform-services/ai-gateway/manifests/: database.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pricing-cronjob.yaml  secret.yaml  secretstore.yaml  service.yaml  servicemonitor.yaml
platform-services/feature-flags/: .gitignore  Cargo.toml  Dockerfile  application.yaml  docker-compose.yaml
platform-services/janitor-bot/: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  application.yaml  build.rs  config.schema.json  config.yaml  kustomization.yaml  rule.schema.json  rules.schema.json  rules.yaml
platform-services/kanidm-sync/: Cargo.toml  Dockerfile  application.yaml
platform-services/pg-db-controller/: Cargo.toml  Dockerfile  application.yaml
(+1216 files in other folders)
