[package]
name = "ingress-home"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["v1_33"] }
askama = "0.14.0"
axum = "0.8.4"
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
anyhow = "1.0.99"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
itertools = "0.14.0"
gateway-api = "0.16.0"

[patch.crates-io]
gateway-api = { git = 'https://github.com/daniel-white/gateway-api-rs.git', branch = 'deps' }
