[package]
name = "ingress-home"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "3.0.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27.0", features = ["v1_33"] }
askama = "0.15.1"
axum = "0.8.8"
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
anyhow = "1.0.100"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
itertools = "0.14.0"
gateway-api = "0.20.0"

[patch.crates-io]
gateway-api = { git = 'https://github.com/kube-rs/gateway-api-rs.git', branch = 'main' }
