[workspace]
resolver = "3"
members = ["cli","object-registry-api",  "object-registry-events", "object-registry"]

[workspace.dependencies]
tokio = { version = "1", features = ["macros"] }
serde = "1.0.228"
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0.100"
aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.98.0"
aws-sdk-dynamodb = "1.103.0"
thiserror = "2.0.18"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.9"
base64 = "0.22.1"
uuid = { version = "1.4", features = ["v4"] }
rsa = "0.9"
object-registry = { path = "./object-registry" }

reqwest = { version = "0.13.1", features = ["json"] }
chrono = "0.4.43"

[profile.release-strip]
inherits = "release"
strip = "symbols"
