[package]
name = "janitor-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
forgejo-api = "0.10"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
url = "2"
tokio-cron-scheduler = { version = "0.15", features = ["english"] }
chrono-tz = "0.10"
anyhow = "1"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
reqwest = { version = "0.13", features = ["json"] }
yaml_serde = "0.10.4"
schemars = "1"
jsonschema = { version = "0.46", default-features = false }
moka = { version = "0.12.15", features = ["sync"] }
git2 = "0.20.4"
tempfile = "3.27.0"

[[bin]]
name = "janitor-bot"
path = "src/main.rs"

[[bin]]
name = "gen-schema"
path = "src/bin/gen_schema.rs"
