[package]
name = "janitor-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
forgejo-api = "0.10"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
url = "2"
tokio-cron-scheduler = { version = "0.15", features = ["english"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
anyhow = "1"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
reqwest = { version = "0.13", features = ["json"] }
yaml_serde = "0.10.4"
schemars = "1"
moka = { version = "0.12.15", features = ["sync"] }
git2 = "0.21.0"
tempfile = "3.27.0"
globset = "0.4.18"
open-feature = "=0.2"
open-feature-flipt = { git = "https://github.com/open-feature/rust-sdk-contrib.git" }
tower-http = { version = "0.6.10", features = ["trace"] }
regex = "1.12"

[build-dependencies]
jsonschema = { version = "0.46", default-features = false }
serde_json = "1"
yaml-include = "0.8.1"
yaml_serde = "0.10.4"

[dev-dependencies]
insta = { version = "1", features = ["yaml", "redactions"] }
regex = "1.12.3"
rstest = "0.26"
serial_test = "3.4.0"
wiremock = "0.6"

[[bin]]
name = "janitor-bot"
path = "src/main.rs"

[[bin]]
name = "gen-schema"
path = "src/bin/gen_schema.rs"

