[package]
name = "config-catalog-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
lambda_http = "1.0.2"
aws-config = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
aws-sdk-s3 = "1.119.0"
tokio = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jwt = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
config-catalog-jwt = { workspace = true }
reqwest = { workspace = true }
