[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
object-registry = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
tokio = { workspace = true }
aws-config = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }

uuid = { version = "1.4", features = ["v4"] }
openssl = "0.10"
chrono = { workspace = true }
