[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
object-registry = { workspace = true }
object-registry-foundations = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
tokio = { workspace = true }
aws-config = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
openssl = { version = "0.10", features = ["vendored"]}
chrono = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
comfy-table = "7.1"
