[package]
name = "object-registry-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
lambda_http = "1.0.2"
aws-config = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
aws-sdk-s3 = "1.120.0"
aws-sdk-dynamodb = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
jwt = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
object-registry = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.4", features = ["v4"] }
rsa = { workspace = true, features = ["pem"] }
jsonwebtoken = "10.2.0"
