[package]
name = "object-registry-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
lambda_http = "1.0.2"
aws-config = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = { workspace = true }
object-registry = { workspace = true }
object-registry-foundations = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
form_urlencoded = "1.2.1"
uuid = { workspace = true }
rsa = { version = "0.9", features = ["pem"] }
jsonwebtoken = { workspace = true }
