[package]
name = "object-registry-events"
version = "0.1.0"
edition = "2024"

[dependencies]
aws_lambda_events = { version = "1.0.3", default-features = false, features = ["s3"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
lambda_runtime = "1.0.2"
config = { version = "0.15.19", features = ["yaml"] }
aws-config = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
aws-sdk-s3 = { workspace = true }
object-registry = { workspace = true }
object-registry-foundations = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
urlencoding = "2.1.3"
