[package]
name = "object-registry"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
hmac = "0.12.1"
sha2 = "0.10.9"
serde = "1.0.228"
serde_json = "1.0"
thiserror = "2.0.18"
chrono = "0.4.43"
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = "1.120.0"
reqwest = { workspace = true }
serde_yaml = { workspace = true }
base64 = { workspace = true }
hex = "0.4"
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
mockito = "1.5.0"
tokio = { version = "1", features = ["full"] }
openssl = "0.10"
