[package]
name = "object-registry"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
serde_yaml = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
mockito = "1.5.0"
tokio = { workspace = true }
openssl = { version = "0.10" }
