[package]
name = "ai-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream", "rustls", "http2"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "tls-rustls", "macros", "chrono", "uuid"] }
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
anyhow = "1"
sha2 = "0.11"
hex = "0.4"
rand = "0.10"
futures = "0.3"
bytes = "1"
llm-bridge-core = "0.3"
http = "1"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
open-feature = "0.3"
openfeature-provider = { git = "https://github.com/Accurate0/inf-k8s.git", branch = "main" }
tower-http = { version = "0.7", features = ["trace"] }
opentelemetry = { version = "0.32.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32.0", features = ["trace", "reqwest-blocking-client", "reqwest-rustls", "http-json"] }
opentelemetry-semantic-conventions = { version = "0.32.0", features = ["semconv_experimental"] }
tracing-opentelemetry = "0.33.0"
axum-tracing-opentelemetry = "0.38.0"
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
insta = { version = "1", features = ["yaml", "redactions"] }
jsonschema = { version = "0.46", default-features = false }
serial_test = "3"
wiremock = "0.6"

[[bin]]
name = "ai-gateway"
path = "src/main.rs"

[[bin]]
name = "aig"
path = "src/bin/aig.rs"
