[package]
name = "feature-flags"
version = "0.1.0"
edition = "2024"

[dependencies]
feature-flag-proto = { git = "https://github.com/Accurate0/inf-k8s.git", branch = "main" }
feature-flag-engine = { git = "https://github.com/Accurate0/inf-k8s.git", branch = "main" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.13", features = ["transport"] }
tonic-health = "0.13"
tonic-reflection = "0.13"
prost = "0.13"
prost-types = "0.13"
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "tls-rustls", "macros", "chrono", "uuid", "json"] }
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
moka = { version = "0.12", features = ["future"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.33.0"
thiserror = "2"
anyhow = "1"
sha2 = "0.11"
futures = "0.3"
http = "1"
clap = { version = "4", features = ["derive", "env"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["http-listener"] }
opentelemetry = { version = "0.32.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32.0", features = ["trace", "reqwest-blocking-client", "reqwest-rustls", "http-json"] }
opentelemetry-semantic-conventions = { version = "0.32.0", features = ["semconv_experimental"] }

[dev-dependencies]
insta = { version = "1", features = ["json", "redactions"] }
serial_test = "3"

[[bin]]
name = "feature-flags"
path = "src/main.rs"

[[bin]]
name = "ffctl"
path = "src/bin/ffctl.rs"
