[package]
name = "feature-flags"
version = "0.1.0"
edition = "2024"

[dependencies]
feature-flag-proto = { path = "../../crates/feature-flag/feature-flag-proto" }
feature-flag-engine = { path = "../../crates/feature-flag/feature-flag-engine" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.14", features = ["transport", "gzip", "zstd"] }
tonic-prost = "0.14"
tonic-health = "0.14"
tonic-reflection = "0.14"
prost = "0.14"
prost-types = "0.14"
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "tls-rustls", "macros", "chrono", "uuid", "json"] }
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
arc-swap = "1"
moka = { version = "0.12", features = ["future"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.33.0"
thiserror = "2"
anyhow = "1"
sha2 = "0.11"
futures = "0.3"
http = "1"
clap = { version = "4", features = ["derive", "env"] }
opentelemetry-http = "0.32"
opentelemetry = { version = "0.32.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32.0", features = ["trace", "reqwest-blocking-client", "reqwest-rustls", "http-json"] }
opentelemetry-semantic-conventions = { version = "0.32.0", features = ["semconv_experimental"] }

[dev-dependencies]
insta = { version = "1", features = ["yaml", "redactions"] }
serial_test = "3"
serde_yaml = "0.9"
tokio-stream = { version = "0.1", features = ["net"] }

[[bin]]
name = "feature-flags"
path = "src/main.rs"

[[bin]]
name = "ffctl"
path = "src/bin/ffctl.rs"
