[package]
name = "janitor-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
forgejo-api = "0.10"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
url = "2"
tokio-cron-scheduler = { version = "0.15", features = ["english"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
anyhow = "1"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
reqwest = { version = "0.13", features = ["json"] }
yaml_serde = "0.10.4"
schemars = "1"
moka = { version = "0.12.15", features = ["sync"] }
git2 = { version = "0.21.0", features = ["https"] }
tempfile = "3.27.0"
globset = "0.4.18"
open-feature = "0.3"
openfeature-provider = { git = "https://github.com/Accurate0/inf-k8s.git", branch = "main" }
tower-http = { version = "0.7.0", features = ["trace"] }
opentelemetry = { version = "0.32.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32.0", features = ["trace", "reqwest-blocking-client", "reqwest-rustls", "http-json"] }
opentelemetry-semantic-conventions = { version = "0.32.0", features = ["semconv_experimental"] }
tracing-opentelemetry = "0.33.0"
axum-tracing-opentelemetry = "0.38.0"
http = "1"
regex = "1.12"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
clap = { version = "4", features = ["derive", "env"] }
yaml-include = "0.8.1"

[build-dependencies]
jsonschema = { version = "0.46", default-features = false }
serde_json = "1"
yaml-include = "0.8.1"
yaml_serde = "0.10.4"

[dev-dependencies]
insta = { version = "1", features = ["yaml", "redactions"] }
regex = "1.12.3"
rstest = "0.26"
serial_test = "3.4.0"
wiremock = "0.6"

[[bin]]
name = "janitor-bot"
path = "src/main.rs"

[[bin]]
name = "gen-schema"
path = "src/bin/gen_schema.rs"

[[bin]]
name = "janitor"
path = "src/bin/janitor_cli.rs"
