[package]
name = "kanidm-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.32"
k8s-openapi = { version = "0.27.0", features = ["latest"] }
kanidm_client = "1.10.0"
kube = { version = "3.0.1", features = ["runtime", "client", "derive"] }
rustls = "0.23"
schemars = "1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"
