[package]
name = "kanidm-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
futures = "0.3.32"
k8s-openapi = { version = "0.28.0", features = ["latest"] }
kanidm_client = "1.10.0"
kanidm_proto = "1.10.0"
kube ={ version = "3.1.0", features = ["runtime", "client", "derive"] }
rustls = "0.23"
schemars = "1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"
