[package]
name = "pg-db-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures = "0.3.32"
k8s-openapi = { version = "0.28.0", features = ["latest"] }
kube = { version = "4.0.0", features = ["runtime", "client", "derive"] }
rand = "0.10.1"
schemars = "1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "tls-rustls", "macros", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"
