[package]
name = "feature-flag-client"
version = "0.1.0"
edition = "2024"

[dependencies]
feature-flag-proto = { path = "../feature-flag-proto" }
feature-flag-engine = { path = "../feature-flag-engine" }
tonic = { version = "0.14", features = ["transport"] }
prost-types = "0.14"
tokio = { version = "1", features = ["sync", "rt", "time"] }
arc-swap = "1"
serde_json = "1"
thiserror = "2"
tracing = "0.1"
rand = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
