[package]
name = "feature-flag-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
feature-flag-proto = { path = "../feature-flag-proto" }
prost-types = "0.13"
moka = { version = "0.12", features = ["sync"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
