[package]
name = "openfeature-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
feature-flag-client = { path = "../feature-flag-client" }
feature-flag-proto = { path = "../feature-flag-proto" }
open-feature = "0.3"
async-trait = "0.1"
prost-types = "0.14"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
